# mee6

./: .agntrick.yaml  .dockerignore  .env.example  .gitignore  .mee6.conf.example  CHANGELOG.md  Dockerfile  LICENSE  PHASE_8_PLAN.md  PipelineStepReordering.md  README.md  debug_rebuild.js  docker-compose.dev.yml  docker-compose.yml  mee6.sh  minimal_test.js  nginx.conf  package-lock.json  package.json  pyproject.toml  vitest.config.js  whatsapp.yaml.example
db/: schema.sql
db/migrations/: 001_whatsapp_trigger_type.sql  002_calendars.sql  003_wa_groups.sql  004_whatsapp_settings.sql  005_remove_trigger_pipeline_name.sql  006_pipeline_memories.sql  007_memory_config.sql  008_pipeline_steps_table.sql  009_fix_pipeline_steps_config.sql  010_rename_memory_tables.sql
mee6/: config.py
mee6/agents/browser_agent/: agent.py
mee6/agents/calendar_agent/: agent.py
mee6/agents/llm_agent/: agent.py
mee6/agents/school_monitor/: agent.py  prompts.py
mee6/db/: engine.py  models.py  repository.py
mee6/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mee6/frontend/src/: App.tsx  index.css
mee6/integrations/: calendar.py  school_app.py  whatsapp.py  whatsapp_session.py
mee6/pipelines/: base.py  executor.py  models.py  placeholders.py  plugin_registry.py  store.py
mee6/pipelines/plugins/: __init__.py  _options.py  browser_agent.py  calendar_agent.py  debug_agent.py  llm_agent.py  memory_agent.py  whatsapp_agent.py  whatsapp_group_read.py  whatsapp_group_send.py  whatsapp_read.py
mee6/scheduler/: engine.py  registry.py
mee6/tasks/: school_events.py
mee6/web/: app.py  templates_env.py
mee6/web/api/: __init__.py  agents.py  integrations.py  models.py  pipelines.py  triggers.py  validation.py
mee6/web/routes/: dashboard.py  history.py  integrations.py  pipelines.py  pipelines.py.backup  triggers.py
mee6/web/static/: style.css
mee6/web/templates/: _agent_fields.html  _history_rows.html  _running_indicator.html  _whatsapp_status.html  base.html  dashboard.html  history.html  integrations.html  memories.html  new_memory.html  pipeline_editor.html  pipelines.html  triggers.html
prompts/: v3.md
prompts/archive/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  999_task.txt  refactor-integrations.md  refactor-triggers.md  refactory001.txt  remove-dead-code.md  remove-dead-code2.md  triggers-phase1.md  v0.2.0.txt
prompts/archive/refactor_steps/: PHASE_7_STEP_4_EDGE_CASE_REPORT.md  PHASE_7_SUMMARY.md  refactory-pipeline-editor.txt
prompts/archive/tasks/: 001_task.txt  002_task.txt  003_task.txt  004_task.txt  005_task.txt  006_task.txt  007_task.txt  008_task.txt  009_task.txt  010_task.txt  011_task.txt  012_task.txt  013_task.txt  014_task.txt  015_task.txt  016_task.txt  017_task.txt  018_task.txt  019_task.txt  020_task.txt  021_task.txt  022_task.txt
prompts/v3/tasks/: 001-scaffold-monorepo.md  002-rails-models-and-migrations.md  003-rails-pipeline-crud-api.md  004-pipeline-execution-engine.md  005-scheduling-cron-triggers.md  006-whatsapp-service-implementation.md  007-whatsapp-rails-integration.md  008-integrations-api.md  009-agent-service-implementation.md  010-react-foundation.md  011-react-pipeline-editor.md  012-react-triggers-and-history.md  013-react-integrations.md  014-data-migration-from-v2.md  015-authentication.md
rails/: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md
rails/app/controllers/: application_controller.rb
rails/app/jobs/: cron_dispatcher_job.rb  pipeline_job.rb  telegram_sync_job.rb  whats_app_sync_job.rb
rails/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
rails/db/: schema.rb  seeds.rb
rails/frontend/: package-lock.json  package.json  vite.config.ts
rails/public/: index.html
rails/spec/: rails_helper.rb  spec_helper.rb
scripts/: install-requirements.sh  setup-google-credentials.sh
services/agents/: Dockerfile  README.md  pyproject.toml
services/agents/app/: auth.py  config.py  main.py  router.py  schema.py
services/agents/app/agents/: base.py  browser_agent.py  calendar_agent.py  llm_agent.py
services/agents/tests/: conftest.py  test_browser_agent.py  test_calendar_agent.py  test_llm_agent.py  test_run_routing.py  test_schema.py
services/telegram/: Dockerfile  pyproject.toml
services/telegram/app/: config.py  main.py  router.py  session.py  store.py
services/whatsapp/: Dockerfile  README.md  pyproject.toml
services/whatsapp/app/: config.py  main.py  router.py  session.py  store.py
services/whatsapp/tests/: conftest.py  test_api.py  test_message_routing.py  test_registration.py  test_send.py
tests/: test_api.py  test_api_triggers.py  test_db_models.py  test_integrations.py  test_memory_agent.py  test_pipeline_executor.py  test_placeholders.py  test_repository.py  test_scheduler_engine.py  test_school_events.py  test_web_routes.py
tests/js/: smoke.test.js
(+261 files in other folders)
