[project]
name = "whatsapp-service"
version = "0.1.0"
description = "WhatsApp microservice for mee6"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "neonize",
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
